<resources>
    <string name="app_name">Series Tracker</string>
    <string name="dialog_new_series_title">Add New Series</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_new_series_negative">Cancel</string>
    <string name="title_main">My Series</string>
    <string name="title_about">About</string>
    <string name="copyright_text">Copyright © 2018</string>
    <string name="version_text">Version %1$s</string>
    <string name="series_poster">Series Poster</string>
    <string name="series_season">Season: %1$d</string>
    <string name="series_episode">Episode: %1$d</string>
    <string name="no_series">No series have been added yet</string>
    <string name="button_seen">Seen!</string>
    <string name="series_description_title">Description</string>
    <string name="series_rating_title">Rating</string>
    <string name="series_rating">IMDb: %1$s/10</string>
    <string name="title_details">Details</string>
    <string name="no_more_episodes">There are no more episodes</string>
    <string name="network_error">Network error</string>
    <string name="series_search_hint">Search for series</string>
    <string name="dialog_series_season">Season:</string>
    <string name="dialog_series_episode">Episode:</string>
    <string name="network_error_message">Network Error\n%1$s</string>
</resources>
